--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,8 +14,8 @@ jobs:
 
             - name: Install and Build
               run: |
-                  npm install
-                  npm run build
+                  yarn install
+                  yarn build
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
