--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "animejs": "3.2.2",
     "howler": "^2.2.4",
     "pathfinding": "^0.4.18",
-    "pixi-filters": "^6.1.5",
-    "stats.js": "^0.17.0"
+    "pixi-filters": "^6.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
@@ -69,6 +68,7 @@
     "network-information-types": "^0.1.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-visualizer": "^5.14.0",
+    "stats.js": "^0.17.0",
     "tsx": "^4.19.3",
     "typedoc": "^0.28.1",
     "typedoc-plugin-markdown": "^4.6.1",
